--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.15"
+  },
+  "engines": {
+    "node": "16.9.1",
+    "npm": "7.21.1"
   }
 }
